# fwup_delta_stm32

./: README.md  note.txt
1.fwup_delta_stm32/: code.txt
1.fwup_delta_stm32/MDK/: fwup_delta.uvguix.nguye  fwup_delta.uvguix.nguye.bak  fwup_delta.uvguix.nhanma  fwup_delta.uvoptx  fwup_delta.uvprojx
1.fwup_delta_stm32/USER/: delay.c  flash.c  flash.h  flash_if.h  janpatch.h  lib_sd.c  lib_sd.h  main.c  save_file.c  save_file.h  usart.c  usart.h
2.janpatch-master/: janpatch.h
2.janpatch-master/cli/: janpatch-cli copy.c  janpatch-cli.c
3.Apptest_stm32/MDK/: JLinkLog.txt  gpio_blynk.uvguix.LaptopAZ.vn  gpio_blynk.uvguix.Nhan_ma  gpio_blynk.uvguix.Quang Bien  gpio_blynk.uvguix.Quang_Bien  gpio_blynk.uvguix.nguye  gpio_blynk.uvguix.nhanma  gpio_blynk.uvoptx  gpio_blynk.uvprojx
3.Apptest_stm32/USER/: array_test.h  debug.c  debug.h  flash_if.c  flash_if.h  i2c.c  i2c.h  lib_sd.c  lib_sd.h  main.c
3.Document/: Mô tả.txt
3.bootloder/MDK/: JLinkLog.txt  Usart1.uvguix.Bien  Usart1.uvguix.LaptopAZ.vn  Usart1.uvguix.Nhan_ma  Usart1.uvguix.Quang Bien  Usart1.uvguix.Quang_Bien  (+4 more)
3.tool/: ota_update_app.py  tempCodeRunnerFile.py
3.tool/2.uart/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Uart  clean.sh  cmake_install.cmake  run.sh
3.tool/2.uart/include/: bts_debug.h  bts_frame_message.h  bts_get_message.h  bts_serialport.h  file.h  handle_msg.h  main.h
3.tool/2.uart/src/: bts_debug.cpp  bts_frame_message.cpp  bts_get_message.cpp  bts_serialport.cpp  file.cpp  handle_msg.cpp  main.cpp
(+176 files in other folders)
